<resources>

    <!-- Edit the following data -->

    <string name="app_name">Buku Saku Migas</string>
    <string name="app_version">1.0.0</string>
    <string name="app_year">2016</string>
    <string name="app_copyright">S-Code Studio</string>
    <string name="app_email">bukumigas.com</string>
    <string name="app_site">http://bukumigas.ourgoodhealth.us</string>


    <!-- AdMob Banner Id -->

    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial_full_screen">ca-app-pub-0664570763252260/1769900428</string>

    <!-- Share text -->

    <string name="app_share_text">Download App: https://play.google.com/store/apps/details?id=xx.xx.xx</string>

    <string name="action_settings">Settings</string>
    <string name="action_continue">Continue</string>
    <string name="action_unblock">Unblock</string>
    <string name="action_block">Block</string>
    <string name="action_about">About</string>
    <string name="action_ok">OK</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="action_copy">Copy</string>
    <string name="action_save">Save</string>
    <string name="action_send">Send</string>
    <string name="action_open">Open</string>
    <string name="action_edit">Edit</string>
    <string name="action_reply">Reply</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_report">Report</string>
    <string name="action_remove">Delete</string>
    <string name="action_create">Create</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_close">Close</string>
    <string name="action_more">Load more</string>
    <string name="action_search">Search</string>
    <string name="action_retry">Retry</string>
    <string name="action_turn_on">Turn on</string>
    <string name="action_turn_off">Turn off</string>
    <string name="tap_exit">Press Back Again to Exit</string>

    <string name="msg_loading">Please wait&#8230;</string>
    <string name="msg_loading_2">Loading. Please wait&#8230;</string>
    <string name="msg_network_error">Please check your Internet connection</string>
    <string name="msg_account_blocked">This account is blocked by a moderator.</string>
    <string name="msg_copied_to_clipboard">Copied to clipboard.</string>
    <string name="msg_enter_item">Please write something or attach photo.</string>
    <string name="msg_enter_msg">Please write something or attach photo.</string>
    <string name="msg_password_changed">Password successfully changed</string>
    <string name="msg_settings_saved">Settings successfully saved.</string>
    <string name="msg_ticket_send_success">Your request is accepted! You will receive a response to the email, which is indicated in the request.</string>
    <string name="msg_password_reset_link_sent">A message with link to reset your password has been sent to your email.</string>
    <string name="msg_no_such_user_in_bd">No such user in database</string>
    <string name="msg_connect_to_facebook_removed">Connect with your Facebook account removed.</string>

    <string name="error_signin">Incorrect username or password</string>
    <string name="error_internet_connection">Tidak ada koneksi internet</string>
    <string name="error_data_loading">When loading data error has occurred. Check your network connection.</string>
    <string name="error_field_empty">Required fields are empty</string>


    <string name="placeholder_email">Email</string>
    <string name="placeholder_subject">Subject</string>
    <string name="placeholder_support_detail">What are you contacting us about?</string>
    <string name="placeholder_current_password">Current password</string>
    <string name="placeholder_new_password">New password</string>
    <string name="placeholder_item_category">Category</string>
    <string name="placeholder_item_title">Title</string>
    <string name="placeholder_search">Cari buku</string>

    <string name="label_gcm_comment_reply">You have a new reply to comment.</string>

    <string name="label_authorization_via_facebook">Authorization via Facebook.</string>
    <string name="label_account_connected_to_facebook">Connected with Facebook</string>
    <string name="label_account_connect_to_facebook">Connect this account with your social network accounts</string>
    <string name="label_empty_list">List is empty.</string>
    
    <string name="label_search_start_screen_msg">Find items by title or/and content.</string>
    <string name="label_search_results">Found items:</string>
    <string name="label_search_results_error">No results found</string>

    <string name="label_to">to</string>
    
    <string name="signup_label_terms_and_policies">Terms and Policies</string>

    <string name="settings_header_general">General</string>
    <string name="settings_header_others">Others</string>
    <string name="settings_header_about">About</string>
    <string name="settings_header_notifications">Notification</string>

    <string name="settings_version">Versi</string>
    <string name="settings_logout">Log out</string>
    <string name="settings_copyright_info">Info Hak Cipta</string>
    <string name="settings_contact_us">Hubungi Kami</string>
    <string name="settings_contact_us_summary">Laporkan Masalah</string>
    <string name="settings_web_site">Our website</string>
    <string name="settings_deactivate_account">Deactivate account</string>
    <string name="settings_edit_account">Signature for your secrets</string>
    <string name="settings_thanks">Acknowledgements</string>
    <string name="settings_terms">Terms of use</string>
    <string name="settings_change_password">Change password</string>
    <string name="settings_services">Services</string>
    <string name="settings_notifications">Push notifications</string>
    <string name="settings_services_summary">Connect with social network accounts</string>
    <string name="settings_account_deactivation">If you proceed deactivate your account, you can never go back. If you want to come back - you\'ll have to create a new account.</string>

    <string name="settings_file">account</string>
    <string name="settings_account_id">account_id</string>
    <string name="settings_account_username">account_username</string>
    <string name="settings_account_access_token">access_token</string>

    <string name="page_1">Buku Terbaru</string>
    <string name="page_2">Kategori</string>
    <string name="page_3">Pencarian</string>
    <string name="page_4">Buku Populer</string>
    <string name="page_5">Buku Favorit</string>
    <string name="page_6">Notifikasi</string>
    <string name="page_7">Profile</string>

    <string-array name="navDrawerItems">
        <item>Buku Terbaru</item>
        <item>Kategori</item>
        <item>Cari Buku</item>
        <item>Buku Populer</item>
        <item>Buku Favorit</item>
        <item>Bantuan</item>
    </string-array>

    <string-array name="navDrawerIcons">
        <item>@drawable/ic_action_stream</item>
        <item>@drawable/ic_action_categories</item>
        <item>@drawable/ic_action_search</item>
        <item>@drawable/ic_action_popular</item>
        <item>@drawable/ic_action_favorites</item>
        <item>@drawable/ic_action_settings</item>
    </string-array>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="title_activity_main">Buku Saku Migas</string>
    <string name="title_activity_feeds">Buku Saku Migas</string>
    <string name="title_activity_settings">Bantuan</string>
    <string name="title_activity_web_view">Web View</string>

    <string name="title_activity_category">Category</string>

    <string name="title_activity_search">Search</string>
    <string name="title_activity_notifications">Notifications</string>
    <string name="title_activity_photo_view">Photo</string>
    <string name="title_activity_account_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_notifications_settings">Push notifications</string>
    <string name="title_activity_favorites">Buku Favorit</string>
    <string name="title_activity_support">Hubungi Kami</string>

    <string name="title_dialog_popular">Setting Buku Populer</string>

    <string name="dialog_popular_0">Sepanjang Waktu</string>
    <string name="dialog_popular_1">Hari</string>
    <string name="dialog_popular_2">Pekan</string>
    <string name="dialog_popular_3">Bulan</string>

</resources>
