<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:key="header_about"
        android:title="@string/settings_header_about">

        <Preference
            android:key="settings_terms"
            android:title="@string/settings_terms"

            android:summary="" />

        <Preference
            android:key="settings_thanks"
            android:title="@string/settings_thanks"
            android:summary="" />

        <Preference
            android:key="settings_version"
            android:title="@string/settings_version"

            android:summary="@string/settings_copyright_info" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="header_others"
        android:title="@string/settings_header_others">

        <Preference
            android:key="settings_contact_us"
            android:title="@string/settings_contact_us"

            android:summary="@string/settings_contact_us_summary" />
    </PreferenceCategory>

</PreferenceScreen>
